<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2B30"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvSistemaSenior"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:fontFamily="monospace"
        android:text="@string/tvSistemaSenior"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/tvPontoDigital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/tvPontoDigital"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSistemaSenior"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvLoginUsuario"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:fontFamily="monospace"
        android:text="@string/tvLoginUsuario"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPontoDigital"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginUsuario"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvSenhaLogin"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:fontFamily="monospace"
        android:text="@string/tvSenhaLogin"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSenhaLogin"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btLogar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="#E91E63"
        android:fontFamily="monospace"
        android:text="@string/btLogar"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenha"
        app:layout_constraintVertical_bias="0.298"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="#E91E63"
        android:fontFamily="monospace"
        android:text="@string/btRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogar"
        app:layout_constraintVertical_bias="0.121" />

</androidx.constraintlayout.widget.ConstraintLayout>