<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2B30"
    tools:context=".Cadastrar">

    <TextView
        android:id="@+id/txtCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/txtCadastrar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:fontFamily="monospace"
        android:text="@string/txtData"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastrar"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/etdData"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtData"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastrar"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/txtEntrada"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:fontFamily="monospace"
        android:text="@string/txtEntrada"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtData"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/txtIdaIntervalo"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:fontFamily="monospace"
        android:text="@string/txtIdaIntervalo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEntrada"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/txtVoltaIntervalo"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:fontFamily="monospace"
        android:text="@string/txtVoltaIntervalo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdaIntervalo"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/txtSaida"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:fontFamily="monospace"
        android:text="@string/txtSaida"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVoltaIntervalo"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/ettEntrada"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtEntrada"
        app:layout_constraintTop_toBottomOf="@+id/etdData"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/ettIdaIntervalo"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtIdaIntervalo"
        app:layout_constraintTop_toBottomOf="@+id/ettEntrada"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/ettVoltaIntervalo"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtVoltaIntervalo"
        app:layout_constraintTop_toBottomOf="@+id/ettIdaIntervalo"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/ettSaida"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtSaida"
        app:layout_constraintTop_toBottomOf="@+id/ettVoltaIntervalo"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/btInserir"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:backgroundTint="#E91E63"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/btInserir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettSaida"
        app:layout_constraintVertical_bias="0.436" />

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:backgroundTint="#E91E63"
        android:fontFamily="monospace"
        android:text="@string/btVoltar"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btInserir"
        app:layout_constraintVertical_bias="0.142" />

</androidx.constraintlayout.widget.ConstraintLayout>